<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#978BC34A"
    tools:context=".recepciondatos">

    <ImageButton
        android:id="@+id/imgregresa"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="322dp"
        android:contentDescription="@string/lbl_flecha"
        android:onClick="btEnviar"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/lblfechanac2"
        android:layout_width="99dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="187dp"
        android:text="@string/lbl_fechanac"
        android:textColor="#0626D5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="221dp" />

    <TextView
        android:id="@+id/lbltelefono2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="447dp"
        android:text="@string/lbl_Telefono"
        android:textColor="#0626D5"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="476dp" />

    <TextView
        android:id="@+id/lblfinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="517dp"
        android:text="@string/lbl_final"
        android:textAlignment="center"
        android:textColor="#4E0303"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="533dp" />

    <TextView
        android:id="@+id/lblcorreo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="372dp"
        android:text="@string/lbl_correo"
        android:textColor="#0626D5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/lblgenero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="312dp"
        android:text="@string/lbl_genero"
        android:textColor="#0626D5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/lblciudad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="254dp"
        android:text="@string/lbl_ciudad"
        android:textColor="#0626D5"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="345dp" />

    <TextView
        android:id="@+id/lblnombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="141dp"
        android:text="@string/lbl_nombre"
        android:textColor="#0626D5"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/lbltitulo2"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="25dp"
        android:text="@string/lbl_recepciondatos"
        android:textAlignment="center"
        android:textColor="#0626D5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/recepcioncorreo"
        android:layout_width="258dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/lblcorreo2"
        android:textColor="#000000"
        android:textColorHint="#2E7D32"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/recepciontelefono"
        android:layout_width="257dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="147dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="7dp"
        android:layout_toEndOf="@+id/lbltelefono2"
        android:textColor="#000000"
        android:textColorHint="#2E7D32"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="467dp" />

    <TextView
        android:id="@+id/recepciongenero"
        android:layout_width="261dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="316dp"
        android:textColor="#000000"
        android:textColorHint="#2E7D32"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp" />

    <TextView
        android:id="@+id/recepcionciudad"
        android:layout_width="262dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="2dp"
        android:layout_toEndOf="@+id/lblciudad2"
        android:textColor="#000000"
        android:textColorHint="#2E7D32"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="345dp" />

    <TextView
        android:id="@+id/recepcionfechanac"
        android:layout_width="266dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/lblfechanac2"
        android:textColor="#000000"
        android:textColorHint="#2E7D32"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/recepcionnombre"
        android:layout_width="265dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="144dp"
        android:textColor="#000000"
        android:textColorHint="#2E7D32"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/recepcionnumeroid"
        android:layout_width="264dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="6dp"
        android:textColor="#000000"
        android:textColorHint="#2E7D32"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="104dp"
        android:text="@string/lbl_numeroid"
        android:textColor="#0626D5"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="128dp" />
</RelativeLayout>